fix: coors to wordpress site temporaly

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,7 +20,7 @@ import { getPageInfo, getSiteInfo } from "../services/wp";
 </DefaultLayout>
 
 <script>
-  import { getSiteInfo } from "../services/wp";
-  const siteInfo = await getSiteInfo();
-  console.log("informacion del sitio", siteInfo);
+  // import { getSiteInfo } from "../services/wp";
+  // const siteInfo = await getSiteInfo();
+  // console.log("informacion del sitio", siteInfo);
 </script>
