refact: pagina principal seccion intstitucional se agrega fondo naranja, y se ajusta menu movile

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -155,27 +155,41 @@ const menuServices = {
   <!-- Mobile Menu Dropdown (Navigation Only) -->
   <div id="mobile-menu" class="hidden md:hidden mt-4 px-4">
     <ul
-      class="flex flex-col gap-4 text-lg font-medium font-lobster bg-white rounded-lg shadow-lg p-4"
+      class="flex flex-col gap-4 text-lg font-medium font-lobster bg-white rounded-lg shadow-lg p-4 text-center"
     >
       <li>
         <a
           href="/#quienes-somos"
-          class="block py-2 hover:text-[#515151] transition">Quienes Somos</a
+          class="block py-2 hover:text-white hover:bg-primary rounded-lg transition"
+          >Quienes Somos</a
         >
       </li>
       <li>
-        <a href="/#mision" class="block py-2 hover:text-[#515151] transition"
+        <a
+          href="/#mision"
+          class="block py-2 hover:text-white hover:bg-primary rounded-lg transition"
           >Misión</a
         >
       </li>
       <li>
-        <a href="/#vision" class="block py-2 hover:text-[#515151] transition"
+        <a
+          href="/#vision"
+          class="block py-2 hover:text-white hover:bg-primary rounded-lg transition"
           >Visión</a
         >
       </li>
       <li>
-        <a href="/#valores" class="block py-2 hover:text-[#515151] transition"
+        <a
+          href="/#valores"
+          class="block py-2 hover:text-white hover:bg-primary rounded-lg transition"
           >Valores</a
+        >
+      </li>
+      <li>
+        <a
+          href="/#contacto"
+          class="block py-2 hover:text-white hover:bg-primary rounded-lg transition"
+          >Contacto</a
         >
       </li>
     </ul>
