--- a/src/pages/servicios/medios-visuales.astro
+++ b/src/pages/servicios/medios-visuales.astro
@@ -1,6 +1,7 @@
 ---
 import DefaultLayout from "../../layouts/DefaultLayout.astro";
 import Header from "../../components/Header.astro";
+import Footer from "../../components/Footer.astro";
 
 const productosIMG = [
     {
@@ -64,9 +65,17 @@ const productosIMG = [
         image: "https://ik.imagekit.io/IV7VRclcnk/medios_visuales/21.webp?updatedAt=1768519835800",
     },
 ];
+
+const seoConfig = {
+    title: "Medios Visuales y Promocionales | Anica Soluciones Integrales",
+    description:
+        "Servicios de rotulación comercial, impresión textil, grabado láser, publicidad exterior y vehicular en Nicaragua. Letras corpóreas, stickers, banners y más.",
+    keywords:
+        "rotulación comercial Nicaragua, letras corpóreas, impresión textil, grabado láser, publicidad vehicular, stickers personalizados, roll up Nicaragua",
+};
 ---
 
-<DefaultLayout>
+<DefaultLayout {...seoConfig}>
     <Header />
 
     <main class="w-full">
@@ -247,4 +256,5 @@ const productosIMG = [
             </div>
         </section>
     </main>
+    <Footer />
 </DefaultLayout>
