--- a/src/components/sections/Mision.astro
+++ b/src/components/sections/Mision.astro
@@ -1,9 +1,32 @@
-<p>
-    Misión: Ser el socio estratégico de nuestros clientes, brindando soluciones
-    integrales y personalizadas en diseño, producción de medios, rotulación,
-    mobiliario de exhibición y mueblería para el hogar, manejo de redes sociales
-    y paginas web, así como la creación de programas empresariales
-    personalizados. Unimos la experiencia con la calidad para transformar ideas
-    en espacios funcionales, creativos y duraderos permitiendo impulsar la
-    imagen comercial y mejorando la calidad de vida en el hogar
-</p>
+---
+interface Props {
+    content: string;
+}
+
+const { content } = Astro.props;
+// separar en dos partes el contenido usando como separador <!--more-->
+const parts = content.split("<!--more-->");
+//  0 contiene la parte introducatoria
+// 1 contiene la parte principal
+const mainContent = parts.length > 1 ? parts[1] : content;
+---
+
+<article class="prose prose-lg max-w-none lg:prose-xl">
+    <div set:html={mainContent} />
+    <style is:global>
+        article ul {
+            list-style-type: disc !important;
+            padding-left: 1.5em;
+        }
+        article li {
+            list-style-type: disc !important;
+        }
+        article h4 {
+            font-family: "Lobster", cursive !important;
+            font-size: 1.3rem !important;
+        }
+        p {
+            text-align: justify;
+        }
+    </style>
+</article>
