--- a/src/components/sections/Vision.astro
+++ b/src/components/sections/Vision.astro
@@ -1,8 +1,32 @@
-<p>
-    Consolidarnos como la empresa líder a nivel nacional en la creación de
-    soluciones personalizadas tanto visuales, como organizacionales que nos
-    permitan ser reconocidos por nuestra capacidad de innovación, versatilidad y
-    compromiso con la entrega de proyectos que superen las expectativas en
-    términos de estética, durabilidad, que nos de valor en la complementariedad
-    empresarial y social.
-</p>
+---
+interface Props {
+    content: string;
+}
+
+const { content } = Astro.props;
+// separar en dos partes el contenido usando como separador <!--more-->
+const parts = content.split("<!--more-->");
+//  0 contiene la parte introducatoria
+// 1 contiene la parte principal
+const mainContent = parts.length > 1 ? parts[1] : content;
+---
+
+<article class="prose prose-lg max-w-none lg:prose-xl">
+    <div set:html={mainContent} />
+    <style is:global>
+        article ul {
+            list-style-type: disc !important;
+            padding-left: 1.5em;
+        }
+        article li {
+            list-style-type: disc !important;
+        }
+        article h4 {
+            font-family: "Lobster", cursive !important;
+            font-size: 1.3rem !important;
+        }
+        p {
+            text-align: justify;
+        }
+    </style>
+</article>
