--- a/src/layouts/DefaultLayout.astro
+++ b/src/layouts/DefaultLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import SEOHead from "../components/SEOHead.astro";
+import { ClientRouter } from 'astro:transitions';
 
 // SEO Props Interface
 interface Props {
@@ -46,6 +47,7 @@ const GA_MEASUREMENT_ID = import.meta.env.PUBLIC_GA_MEASUREMENT_ID;
         </script>
       </>
     )}
+    <ClientRouter />
   </head>
   <body class="antialiased bg-white text-gray-900 flex flex-col min-h-screen">
     <slot />
